# ngxpro

./: .gitignore  DATA_PIPELINE_GUIDE.md  Dockerfile  MOCK_DATA_GUIDE.md  Makefile  README.md  design.md  docker-compose.yaml  env.example  pyproject.toml  requirements.md  requirements_mlflow.txt  tasks.md  validation_report.json
monitoring/: prometheus.yml
scripts/: init_db.sql  populate_database.py  run_full_pipeline.py  run_local_test.py  run_real_ingestion.py  run_real_ingestion_local.py  simple_test.py  simple_validation.py  test_feature_pipeline.py  test_ingestion.py  update_mock_dates.py  validate_implementation.py
src/ngfx_predictor/: __init__.py
src/ngfx_predictor/api/: __init__.py  main.py
src/ngfx_predictor/config/: __init__.py  settings.py
src/ngfx_predictor/features/: __init__.py  engineering.py  transformers.py
src/ngfx_predictor/ingestion/: __init__.py  ingestion.py  scheduler.py
src/ngfx_predictor/utils/: __init__.py  cache.py  exceptions.py  logging.py  metrics.py  validation.py
src/ngfx_predictor/validation/: __init__.py  data_validator.py  validators.py
tests/: test_api.py
